--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@react-native-firebase/app": "^18.7.3",
+		"@react-native-firebase/auth": "^18.7.3",
 		"react": "18.2.0",
 		"react-native": "0.73.1"
 	},
