--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
 		"postinstall": "npm run install-pods"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
 		"@react-native-firebase/app": "^18.7.3",
 		"@react-native-firebase/auth": "^18.7.3",
+		"@react-native-firebase/storage": "^18.7.3",
+		"@react-navigation/native": "^6.1.9",
+		"@react-navigation/native-stack": "^6.9.17",
 		"react": "18.2.0",
-		"react-native": "0.73.1"
+		"react-hook-form": "^7.49.2",
+		"react-native": "0.73.1",
+		"react-native-gesture-handler": "^2.14.0",
+		"react-native-image-picker": "^7.1.0",
+		"react-native-paper": "^5.11.6",
+		"react-native-safe-area-context": "^4.8.2",
+		"react-native-screens": "^3.29.0",
+		"yup": "^1.3.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
